Fix mobile responsive issue (#119)
* Remove unwanted space under header bar.

* Remove link from Logo

* Fix plots status style on mobile

* Update plot geojson

* update unallocated plot style

--- a/packages/react-app/src/App.less
+++ b/packages/react-app/src/App.less
@@ -133,7 +133,6 @@
 
   @media (max-width: 720px) {
     overflow-y: scroll;
-    height: auto;
     background-color: @gray-2;
   }
 }
@@ -165,6 +164,15 @@
 
 /* Plots status bar */ 
 .plot-status {
+  @media (max-width: 485px) {
+    & {
+      flex-wrap: wrap;
+      bottom: 1rem !important;
+    }
+    div {
+      width: 50%
+    }
+  }
   .acres:before {
     content: '';
     width: 13px;
@@ -521,12 +529,12 @@ select:focus {
 
   @media (max-width: 1024px) {
     grid-template-columns: 1fr;
-    grid-template-rows: 3rem repeat(2, 4rem) 300px 4rem 5fr;
+    grid-template-rows: 0rem repeat(2, 4rem) 300px 4rem 5fr;
   }
 
   // Responsive for mobile landscape screens
   @media (max-height: 500px) {
-    grid-template-rows: 3rem repeat(2, 4rem) 300px 4rem 600px;
+    grid-template-rows: 0rem repeat(2, 4rem) 300px 4rem 600px;
   }
 }
 
